@@ -42,6 +42,7 @@ marked for removal in alpha 1.4.0:
     [2] __main__.main()
     [2] Chunk.update_visable_block(), Chunk.update_visable()
     [2] AdvancedBlockFactory stuff
+    [2] FurnaceCrafting/FurnesRecipe
 
 
 marked for removal in alpha 1.5.0:
